# cuda-image-recognition

./: .gitignore  CIR.cpp  CMakeLists.txt  ConfigHelper.cpp  ConfigHelper.h  README.md  camera-recognition.cpp  image-surf.cpp  metro-recognition.cpp  registration-plate-recognition.cpp  speed-limit-recognition.cpp  uwagi-rim-e2.txt  video-recognition.cpp
modules/common/: CMakeLists.txt  mat_wrapper.cpp
modules/common/include/cir/common/: Blurer.h  ColorDetector.h  Hsv.h  ImageProcessingService.h  Marker.h  MatWrapper.h  MomentCounter.h  Pattern.h  Point.h  Segment.h  SegmentArray.h  Segmentator.h  SurfApi.h  SurfHelper.h  SurfPoints.h  config.h.in  cuda_host_util.cuh  test_file_loader.h
modules/common/include/cir/common/classification/: Classifier.h  HuMomentsClassifier.h  TesseractClassifier.h
modules/common/include/cir/common/concurrency/: ConversionThread.h  IndexedMatWrapper.h  IndexedMatWrapperBlockingQueue.h  MatWrapperBlockingQueue.h  StreamHandler.h  VideoReaderThread.h  VideoWriterThread.h
modules/common/include/cir/common/exception/: FileException.h  InvalidColorSchemeException.h  InvalidMatTypeException.h  InvalidParamException.h  OcrException.h  UnsupportedDataTypeException.h  VideoException.h
modules/common/include/cir/common/logger/: BufferedConfigurableLogger.h  ConsoleCsvLogger.h  CsvLogger.h  ImmediateConsoleLogger.h  Logger.h  NullLogger.h
modules/common/include/cir/common/recognition/: MetroRecognizor.h  Pattern.h  RecognitionInfo.h  Recognizor.h  RegistrationPlateRecognizor.h  RegistrationPlateTeacher.h  SpeedLimitRecognizor.h
modules/common/include/cir/common/video/: MultiThreadVideoHandler.h  (+4 more)
modules/common/include/common/: MatWrapper.h
modules/common/src/common/: Blurer.cpp  ColorDetector.cpp  Hsv.cpp  ImageProcessingService.cpp  Marker.cpp  MatWrapper.cpp  MomentCounter.cpp  Pattern.cpp  Point.cpp  Segment.cpp  SegmentArray.cpp  Segmentator.cpp  SurfApi.cpp  SurfHelper.cpp  SurfPoints.cpp  cuda_host_util.cu  test_file_loader.cpp
modules/common/src/common/classification/: Classifier.cpp  HuMomentsClassifier.cpp  TesseractClassifier.cpp
modules/common/src/common/concurrency/: ConversionThread.cpp  IndexedMatWrapper.cpp  IndexedMatWrapperBlockingQueue.cpp  MatWrapperBlockingQueue.cpp  StreamHandler.cpp  VideoReaderThread.cpp  VideoWriterThread.cpp
modules/common/src/common/exception/: FileException.cpp  InvalidColorSchemeException.cpp  InvalidMatTypeException.cpp  InvalidParamException.cpp  OcrException.cpp  UnsupportedDataTypeException.cpp  VideoException.cpp
modules/common/src/common/logger/: BufferedConfigurableLogger.cpp  ConsoleCsvLogger.cpp  CsvLogger.cpp  ImmediateConsoleLogger.cpp  Logger.cpp  NullLogger.cpp
modules/common/src/common/recognition/: MetroRecognizor.cpp  Pattern.cpp  RecognitionInfo.cpp  Recognizor.cpp  RegistrationPlateRecognizor.cpp  RegistrationPlateTeacher.cpp  SpeedLimitRecognizor.cpp
modules/common/src/common/video/: MultiThreadVideoHandler.cpp  RecognitionVideoConverter.cpp  SingleThreadVideoHandler.cpp  VideoConverter.cpp  VideoHandler.cpp
modules/common/test/common/: MatWrapperTest.cpp
modules/cpu-processing/: CMakeLists.txt
modules/cpu-processing/include/cir/cpuprocessing/: CpuBlurer.h  CpuColorDetector.h  CpuImageProcessingService.h  CpuMomentCounter.h  CpuRedMarker.h  CpuRegionGrowingSegmentator.h  CpuRegionSplittingSegmentator.h  CpuSurfApi.h  CpuUnionFindSegmentator.h
modules/cpu-processing/src/cpuprocessing/: CpuBlurer.cpp  CpuColorDetector.cpp  CpuImageProcessingService.cpp  CpuMomentCounter.cpp  CpuRedMarker.cpp  CpuRegionGrowingSegmentator.cpp  CpuRegionSplittingSegmentator.cpp  CpuSurfApi.cpp  CpuUnionFindSegmentator.cpp
modules/cpu-processing/test/cpuprocessing/: RegionSplittingSegmentatorTest.cpp  UnionFindSegmentatorTest.cpp
modules/cuda-neural-network/: CMakeLists.txt  file_saving_test.json
modules/cuda-neural-network/include/cnn/: Layer.h  NeuralNetwork.h
modules/cuda-neural-network/include/cnn/exception/: InvalidNeuronTypeException.h
modules/cuda-neural-network/include/cnn/file/: CnnFileLoader.h  FileLoader.h  FileSaver.h
modules/cuda-neural-network/include/cnn/neuron/: IdentityNeuron.h  Neuron.h  NeuronType.h  NeuronUtil.h  SigmoidNeuron.h
modules/cuda-neural-network/src/cnn/: Layer.cpp  NeuralNetwork.cpp
modules/cuda-neural-network/src/cnn/exception/: InvalidNeuronTypeException.cpp
modules/cuda-neural-network/src/cnn/file/: CnnFileLoader.cpp  FileLoader.cpp  FileSaver.cpp
modules/cuda-neural-network/src/cnn/neuron/: IdentityNeuron.cpp  Neuron.cpp  NeuronUtil.cpp  SigmoidNeuron.cpp
modules/cuda-neural-network/test/cnn/: LayerTest.cpp  NeuralNetworkTest.cpp
modules/cuda-neural-network/test/cnn/file/: CnnFileLoaderTest.cpp  FileSaverTest.cpp
modules/cuda-neural-network/test/cnn/neuron/: IdentityNeuronTest.cpp
modules/dev-env/: CMakeLists.txt
modules/dev-env/include/cir/devenv/: CudaDeviceChecker.cuh  CudaDeviceChecker.h  DeviceProps.cuh  OpenCvGpuChecker.h  ThreadInfo.h
modules/dev-env/src/devenv/: CudaDeviceChecker.cu  DeviceProps.cu  OpenCvGpuChecker.cpp  ThreadInfo.cpp
modules/dev-env/test/devenv/: CudaDeviceTest.cpp  OpenCvGpuDeviceTest.cpp  ThreadInfoTest.cpp
modules/gpu-processing/: CMakeLists.txt
modules/gpu-processing/include/cir/gpuprocessing/: GpuBlurer.h  GpuColorDetector.h  GpuImageProcessingService.h  GpuMomentCounter.h  GpuRedMarker.h  GpuRegionSplittingSegmentator.h  GpuSurfApi.h  GpuUnionFindSegmentator.h  count_moments.cuh  detect_color.cuh  gpu_blur.cuh  region_splitting_segmentate.cuh  segmentate_base.cuh  union_find_segmentate.cuh
modules/gpu-processing/src/gpuprocessing/: GpuBlurer.cpp  GpuColorDetector.cpp  GpuImageProcessingService.cpp  GpuMomentCounter.cpp  GpuRedMarker.cpp  GpuRegionSplittingSegmentator.cpp  GpuSurfApi.cpp  GpuUnionFindSegmentator.cpp  count_moments.cu  detect_color.cu  gpu_blur.cu  region_splitting_segmentate.cu  segmentate_base.cu  union_find_segmentate.cu
modules/gpu-processing/test/gpuprocessing/: RegionSplittingSegmentatorTest.cpp  UnionFindSegmentatorTest.cpp  region_splitting_segmentate.cpp
(+11 files in other folders)
